# codb

./: Cargo.toml  README.md  spec.md  todo.md
codb-core/: Cargo.toml
codb-core/src/: ident.rs  ident_forest.rs  ident_path.rs  ident_tree.rs  lib.rs  nested_ident.rs
codb-macro/: Cargo.toml
codb-macro/src/: lib.rs
codb-shell/: .gitignore  Cargo.toml  create_users.coql  create_users.cql  db.codb  insert_users.coql  insert_users.cql  match_status.coql  range_users.coql
codb-shell/src/: main.rs
src/: error.rs  expr.rs  idents.rs  lib.rs  scope.rs  ttype.rs
src/db/: mod.rs
src/db/pager/: guard.rs  mod.rs
src/db/registry/: mod.rs  module.rs
src/db/relation/: memory.rs  mod.rs  pager.rs
src/db/relation/file/: mod.rs
src/expression/: action.rs  arithmetic_op.rs  control_flow.rs  function_invocation.rs  literal.rs  logical_op.rs  mod.rs
src/query/: lex.rs  lexer.rs  mod.rs  parser.rs  schema_query.rs
src/registry/: function_registry.rs  mod.rs  type_registry.rs
src/relation/: memory.rs  mod.rs
src/relation/file/: btree.rs  mod.rs  mod_old.rs  page.rs
src/typesystem/: function.rs  mod.rs  registry.rs  scope.rs  ttype.rs  value.rs
src/typesystem/value/: literal.rs  mod.rs  typed.rs
